; ModuleID = '/home/carl/AnghaBench/linux/drivers/mtd/nand/raw/extr_mtk_nand.c_nfi_writel.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/mtd/nand/raw/extr_mtk_nand.c_nfi_writel.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mtk_nfc = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.mtk_nfc*, i64, i64)* @nfi_writel to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @nfi_writel(%struct.mtk_nfc* %0, i64 %1, i64 %2) #0 {
  %4 = alloca %struct.mtk_nfc*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  store %struct.mtk_nfc* %0, %struct.mtk_nfc** %4, align 8
  store i64 %1, i64* %5, align 8
  store i64 %2, i64* %6, align 8
  %7 = load i64, i64* %5, align 8
  %8 = load %struct.mtk_nfc*, %struct.mtk_nfc** %4, align 8
  %9 = getelementptr inbounds %struct.mtk_nfc, %struct.mtk_nfc* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = load i64, i64* %6, align 8
  %12 = add nsw i64 %10, %11
  %13 = call i32 @writel(i64 %7, i64 %12)
  ret void
}

declare dso_local i32 @writel(i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
